improve Kotlin test